--- a/index.html
+++ b/index.html
@@ -62,15 +62,19 @@
                         <div class="speaker">
                             <img src="images/speaker1.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>1人目: 未定</h4>
-                                <p>1人目のプロフィール</p>
+                                <h4>いろふさん</h4>
+                                <p>大阪中心の人</p>
+                                <p>関西java野郎</p>
+                                <p>主に業務webアプリの開発</p>
                             </div>
                         </div>
                         <div class="speaker">
+                            <!--TODO:プロフィール画像を受け取ったら更新する-->
                             <img src="images/speaker2.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>2人目: 未定</h4>
-                                <p>2人目のプロフィール</p>
+                                <h4>うらがみ</h4>
+                                <p>大阪のプログラマ</p>
+                                <p>一年間毎日コミットし続けている</p>
                             </div>
                         </div>
                     </article>
